--- a/SisMaper/Views/ViewUnidades.xaml
+++ b/SisMaper/Views/ViewUnidades.xaml
@@ -9,7 +9,8 @@
     xmlns:iconpacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:m="clr-namespace:SisMaper.ViewModel"
     xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
-    Dialog:DialogParticipation.Register="{Binding}"
+    xmlns:templates="clr-namespace:SisMaper.Views.Templates"
+    templates:DialogParticipation.MyRegister="{Binding}"
     x:Class="SisMaper.Views.ViewUnidades"
     x:Name="this"
     mc:Ignorable="d"
