--- a/SisMaper/Views/CrudProduto.xaml
+++ b/SisMaper/Views/CrudProduto.xaml
@@ -11,13 +11,14 @@
     xmlns:templates="clr-namespace:SisMaper.Views.Templates"
     xmlns:iconpacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:m="clr-namespace:SisMaper.ViewModel"
-    xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro" xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-    Dialog:DialogParticipation.Register="{Binding}"
+    xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+    templates:DialogParticipation.MyRegister="{Binding}"
     x:Class="SisMaper.Views.CrudProduto"
     x:Name="this"
     mc:Ignorable="d"
-    Title="Produto - 00001"
+    Title="{Binding Produto.Id, StringFormat='{}Produto - {0:00000}', FallbackValue='Novo Produto', Converter={StaticResource NotZero}}"
     TitleCharacterCasing="Normal"
+    ResizeMode="NoResize"
     MinHeight="500"
     MinWidth="750"
     Height="500"
@@ -148,7 +149,7 @@
     
 
     
-    <Grid x:Name="grid" >
+    <Grid x:Name="grid"  >
         <Button
             Style="{DynamicResource OptionsButtonStyle}"
             Content="Cancelar"
@@ -166,7 +167,7 @@
             Command="{Binding Salvar}"/>
         <TextBlock
             HorizontalAlignment="Left"
-            Margin="35,93,0,0"
+            Margin="20,93,0,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top"><Run
                 Language="pt-br"
@@ -188,27 +189,48 @@
             VerticalAlignment="Top"
             Width="63" />
 
-        <ComboBox ItemsSource="{Binding Categorias, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cat"
-            SelectedItem="{Binding CategoriaSelecionada, Mode=TwoWay}"
-            Grid.Row="0"
-            Height="32"
-            Margin="158,164,427,0"
-            FontSize="16"
-            mah:TextBoxHelper.Watermark="Buscar Categoria"
-            IsEditable="true"
-            MaxDropDownHeight="125"
-            mah:TextBoxHelper.WatermarkAlignment="Right"
-            mah:TextBoxHelper.AutoWatermark="True"
-            VerticalAlignment="Top" 
-            Text="{Binding TextoCategoria}">
-
-        </ComboBox>
+        <StackPanel Orientation="Horizontal" Margin="144,164,0,0" Height="32" Width="204" HorizontalAlignment="left" VerticalAlignment="Top"> 
         
+            <ComboBox ItemsSource="{Binding Categorias, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                SelectedItem="{Binding CategoriaSelecionada, Mode=TwoWay}"
+                Grid.Row="0"
+                Height="32"
+                Width="165"
+                Margin="0"
+                FontSize="16"
+                mah:TextBoxHelper.Watermark="Categoria"
+                IsEditable="false"
+                MaxDropDownHeight="125"
+                mah:TextBoxHelper.WatermarkAlignment="Right"
+                mah:TextBoxHelper.AutoWatermark="True"
+                VerticalAlignment="Top"
+                HorizontalAlignment="Left"
+                DisplayMemberPath="Descricao"
+                mah:TextBoxHelper.ClearTextButton="True">
+
+            </ComboBox>
+
+            <Button Width="32" Height="32" Margin="4,0" VerticalAlignment="Bottom" Focusable="false" CommandParameter="{Binding}" Command="{Binding EditarCategorias}" Background="White" >
+                <StackPanel>
+                    <iconpacks:PackIconMaterial Kind="Pencil" Foreground="Green" Width="18" Height="18"/>
+                </StackPanel>
+
+                <Button.ToolTip>
+                    <TextBlock
+                        Foreground="Black"
+                        Text="Editar Categorias">
+                    </TextBlock>
+                </Button.ToolTip>
+
+
+            </Button>
+
+        </StackPanel>
 
 
         <TextBlock
             HorizontalAlignment="Left"
-            Margin="34,168,0,0"
+            Margin="20,168,0,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top"><Run
                 Language="pt-br"
@@ -216,15 +238,15 @@
         <TextBox
             Style="{DynamicResource TextBoxStyle1}"
             HorizontalAlignment="Left"
-            Margin="157,88,0,0"
+            Margin="144,88,0,0"
             TextWrapping="Wrap"
             Text = "{Binding Produto.Descricao, UpdateSourceTrigger=PropertyChanged}"
             VerticalAlignment="Top"
-            Width="562" Height="64" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Auto" mah:ScrollViewerHelper.IsHorizontalScrollWheelEnabled="True" />
+            Width="576" Height="64" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Auto" mah:ScrollViewerHelper.IsHorizontalScrollWheelEnabled="True" />
         <CheckBox FontSize="16" Content="Inativo" HorizontalAlignment="Left" Margin="647,49,0,0" VerticalAlignment="Top" IsChecked="{Binding Produto.Inativo}"/>
         <TextBlock
             HorizontalAlignment="Left"
-            Margin="35,36,0,0"
+            Margin="20,36,0,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top" Height="46" Width="84"><Run
                 Language="pt-br"
@@ -233,31 +255,54 @@
         <TextBox  
             Style="{DynamicResource TextBoxStyle1}"
             HorizontalAlignment="Left"
-            Margin="159,43,0,0"
+            Margin="144,43,0,0"
             TextWrapping="Wrap"
             Text="{Binding Produto.CodigoBarras, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
             VerticalAlignment="Top"
             Width="216" 
-            MaxLength="13" PreviewKeyDown="CodigoDeBarrasTextBoxKeyDown" PreviewTextInput="TextBox_TextInput" />
+            MaxLength="13" PreviewKeyDown="CodigoDeBarrasTextBoxKeyDown" />
 
-        <ComboBox ItemsSource="{Binding Unidades}"
-            SelectedItem="{Binding UnidadeSelecionada, Mode=TwoWay}"
-            Grid.Row="0"
-            Height="32"
-            Margin="158,206,427,0"
-            FontSize="16"
-            mah:TextBoxHelper.Watermark="Unidade"
-            IsEditable="true"
-            MaxDropDownHeight="125"
-            mah:TextBoxHelper.WatermarkAlignment="Right"
-            mah:TextBoxHelper.AutoWatermark="True"
-            VerticalAlignment="Top"
-            Text="{Binding TextoUnidade}">
 
-        </ComboBox>
+        <StackPanel Orientation="Horizontal" Margin="144,206,0,0" Height="32" Width="204" HorizontalAlignment="left" VerticalAlignment="Top">
+        
+            <ComboBox ItemsSource="{Binding Unidades, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                SelectedItem="{Binding UnidadeSelecionada, Mode=TwoWay}"
+                Grid.Row="0"
+                Height="32"
+                Width="165"
+                Margin="0"
+                FontSize="16"
+                mah:TextBoxHelper.Watermark="Unidade"
+                IsEditable="false"
+                MaxDropDownHeight="125"
+                mah:TextBoxHelper.WatermarkAlignment="Right"
+                mah:TextBoxHelper.AutoWatermark="True"
+                VerticalAlignment="Top"
+                DisplayMemberPath="Descricao"
+                mah:TextBoxHelper.ClearTextButton="True">
+
+            </ComboBox>
+
+            <Button Width="32" Height="32" Margin="4,0" VerticalAlignment="Bottom" Focusable="false" CommandParameter="{Binding}" Command="{Binding EditarUnidades}" Background="White" >
+                <StackPanel>
+                    <iconpacks:PackIconMaterial Kind="Pencil" Foreground="Green" Width="18" Height="18"/>
+                </StackPanel>
+
+                <Button.ToolTip>
+                    <TextBlock
+                        Foreground="Black"
+                        Text="Editar Unidades">
+                    </TextBlock>
+                </Button.ToolTip>
+
+
+            </Button>
+
+        </StackPanel>
+        
         <TextBlock
             HorizontalAlignment="Left"
-            Margin="34,210,0,0"
+            Margin="20,210,0,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top"><Run Language="pt-br" Text="Unidade"/></TextBlock>
 
@@ -266,7 +311,7 @@
             DisplayMemberPath="Descricao"
             Grid.Row="0"
             Height="32"
-            Margin="158,248,427,0"
+            Margin="144,248,441,0"
             FontSize="16"
             mah:TextBoxHelper.Watermark="NCM"
             IsEditable="false"
@@ -286,20 +331,20 @@
 
         <TextBlock
             HorizontalAlignment="Left"
-            Margin="35,252,0,0"
+            Margin="20,252,0,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top"><Run Language="pt-br" Text="NCM"/></TextBlock>
         <CheckBox IsEnabled="True" FontSize="16" Content="Fracionado" HorizontalAlignment="Left" Margin="515,49,0,0" VerticalAlignment="Top" IsChecked="{Binding Produto.Fracionado}"/>
         <TextBlock
             HorizontalAlignment="Left"
-            Margin="34,293,0,0"
+            Margin="20,293,0,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top" Height="32" Width="122"><Run Language="pt-br" Text="Preço de Custo"/><LineBreak/><Run Language="pt-br"/></TextBlock>
         <templates:CurrencyTextBox
             Style="{DynamicResource TextBoxStyle1}"
             HorizontalAlignment="Left"
             HorizontalContentAlignment="Right"
-            Margin="158,292,0,0"
+            Margin="144,292,0,0"
             TextWrapping="Wrap"
             IsNegative="False"
             Number="{Binding Produto.PrecoCusto, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -307,14 +352,14 @@
             Width="165" />
         <TextBlock
             HorizontalAlignment="Left"
-            Margin="34,336,0,0"
+            Margin="20,336,0,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top" Height="32" Width="122"><Run Language="pt-br" Text="Margem"/></TextBlock>
         <TextBox
             Style="{DynamicResource TextBoxStyle1}"
             HorizontalAlignment="Left"
             HorizontalContentAlignment="Right"
-            Margin="158,336,0,0"
+            Margin="144,336,0,0"
             TextWrapping="Wrap"
             Text="{Binding Produto.Porcentagem, ConverterCulture={x:Static sysglob:CultureInfo.CurrentCulture}, StringFormat={}{0:#0.000}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             VerticalAlignment="Top"
@@ -322,16 +367,16 @@
             Width="165" Padding="20,4,20,4" />
         <TextBlock 
             Text="%"
-            Margin="305,341,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            Margin="291,341,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <TextBlock
             HorizontalAlignment="Left"
-            Margin="34,378,0,0"
+            Margin="20,378,0,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top" Height="32" Width="122"><Run Text="Preço de "/><Run Language="pt-br" Text="Venda"/><LineBreak/><Run/></TextBlock>
         <templates:CurrencyTextBox
             Style="{DynamicResource TextBoxStyle1}"
             HorizontalAlignment="Left"
-            Margin="158,378,0,0"
+            Margin="144,378,0,0"
             HorizontalContentAlignment="Right"
             TextWrapping="Wrap"
             MinimumValue="{x:Static system:Decimal.Zero}"
