--- a/SisMaper/Views/ViewClientes.xaml
+++ b/SisMaper/Views/ViewClientes.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl 
+﻿<templates:MyUserControl 
     x:Class="SisMaper.Views.ViewClientes"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -14,7 +14,8 @@
     xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
     xmlns:iconPacks="clr-namespace:MahApps.Metro.IconPacks;assembly=MahApps.Metro.IconPacks.Material"
     xmlns:converter="clr-namespace:MahApps.Metro.IconPacks.Converter;assembly=MahApps.Metro.IconPacks.Core"
-    Dialog:DialogParticipation.Register="{Binding}"
+    xmlns:templates="clr-namespace:SisMaper.Views.Templates"
+    templates:DialogParticipation.MyRegister="{Binding}"
     mc:Ignorable="d"
     Height="500" Width="1000"
     
@@ -472,7 +473,7 @@
                                 <DataGridTextColumn 
                                 Width="40*"
                                 Header="CPF"
-                                Binding="{Binding CPF}"
+                                Binding="{Binding CPF_CNPJ}"
                                 IsReadOnly="True"/>
 
                             </DataGrid.Columns>
@@ -528,7 +529,7 @@
                                 <DataGridTextColumn 
                                 Width="40*"
                                 Header="CNPJ"
-                                Binding="{Binding CNPJ}"
+                                Binding="{Binding CPF_CNPJ}"
                                 IsReadOnly="True"/>
 
 
@@ -561,4 +562,4 @@
     </Grid>
 
 
-</UserControl>
+</templates:MyUserControl>
