--- a/SisMaper/Views/ViewParcela.xaml
+++ b/SisMaper/Views/ViewParcela.xaml
@@ -176,7 +176,7 @@
                 
                 <StackPanel Orientation="Horizontal" Height="40" VerticalAlignment="Top" Margin="0,0,0,0">
                     <TextBlock Margin="10,10,0,0" Text="Data de Vencimento" FontSize="20" Height="28" Width="200"/>
-                    <DatePicker  BorderThickness="2" 
+                    <DatePicker  BorderThickness="2" Name="DataVencimentoDatePicker"
                     Height="28"
                     FontSize="14"
                     HorizontalAlignment="Left"
